--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -6,13 +6,12 @@
     color: var(--text);
     text-transform: uppercase;
     margin-bottom: 1rem;
+    text-align: center;
   }
 }
 
 .container{
   max-width: 968px;
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
 }
 
 .grid{
