--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -55,16 +55,17 @@
       justify-content: center;
       align-items: center;
       background-color: var(--modal);
-      gap: 3rem;
+      gap: 3.2rem;
       transition: .3s;
     }
     
     &__link {
-      font-size: 2rem;
+      font-size: 1.6rem;
       color: var(--text-modal);
 
       &::after {
         background-color: var(--text-modal);
+        height: .2rem;
       }
     }
     &__btn {
