--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -14,6 +14,11 @@ body {
   color: var(--text);
 }
 
+img {
+  width: 100%;
+  height: auto;
+}
+
 ul {
   list-style: none;
 }
@@ -45,4 +50,3 @@ button {
 }
 
 [lang="EN"] { display: none; }
-
