--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -6,11 +6,17 @@
   justify-content: center;
   align-items: center;
   color: white;
-  
+
+  &__img {
+    display: none;
+  }
 }
 
 .hero {
   width: 70%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   
   &__logo {
     font-size: 5rem;
@@ -37,5 +43,9 @@
     &:hover::after {
       opacity: 1;
     }
+  }
+
+  & .btn-2 {
+    width: 50%;
   }
 }
