--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -1,30 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500&family=Righteous&family=Josefin+Sans&display=swap');
+
 :root {
   --header-height: 4rem;
 
   // COLORS
 
-  --primary: hsl(260, 100%, 64%);
-  --primary-light: hsl(260, 100%, 70%);
-  --primary-alt: hsl(174, 62%, 57%);
-  --secondary: hsl(344, 58%, 56%);
-  --secondary-light: hsl(344, 58%, 66%);
-  --secondary-alt: hsl(15, 60%, 55%);
+  --primary: hsl(260, 100%, 64%); //8547ff
+  --primary-light: hsl(260, 100%, 70%); //96f
+  --primary-alt: hsl(174, 62%, 57%); //4dd5c8
+  --secondary: hsl(344, 58%, 56%); //d04e70
+  --secondary-light: hsl(344, 58%, 66%); //db7691
+  --secondary-alt: hsl(35, 60%, 55%); //d19847
 
   --text: hsl(207, 95%, 13%);
   --text-btn: hsl(100, 100%, 99%);
+  --text-alt: hsl(100, 100%, 99%);
 
   --background1:hsla(220, 14%, 91%, 1);
-  --background2: hsla(220, 13%, 85%, 1);
+  --background2: hsla(220, 13%, 85%, 1); 
+
+  --card: hsla(220, 14%, 91%, 1);
 
   --bg1: linear-gradient(var(--background1) 30%, var(--background2));
   // --bg2: linear-gradient(90deg, var())
-  --modal: hsla(220, 14%, 86%, .97);
+  --curtain: hsla(220, 14%, 86%, .97);
+  --modal: hsla(221, 39%, 11%, .97);
   --text-modal: hsla(221, 39%, 11%, 1);
-}
 
-/*
- --primary: hsl(174, 62%, 47%);
-  --primary-alt: hsl(174, 62%, 57%);
-  --secondary: hsl(35, 100%, 55%);
-  --secondary-alt: hsl(35, 100%, 60%);
-*/
+  --header-color: hsla(220, 14%, 91%, .95);
+
+  --shadow1: hsla(240, 30%, 28%, 0.25) 0px 3px 5px -2px, hsla(0, 0%, 0%, 0.3) 0px 3px 5px -3px;
+  --shadow2: hsla(240, 30%, 8%, 0.25) 0px 13px 27px -5px, hsla(0, 0%, 0%, 0.3) 0px 8px 16px -8px;
+}
