--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -1,19 +1,44 @@
 .section {
-  padding: 4.5rem 0 1rem;
+  padding: 4.5rem 0 4rem;
 
   &__title {
-    font-size: 2rem;
+    font-size: 2.5rem;
     color: var(--text);
     text-transform: uppercase;
-    margin-bottom: 1rem;
-    text-align: center;
+    margin-bottom: 2rem;
+    font-family: 'Josefin Sans', sans-serif;    
   }
 }
 
 .container{
   max-width: 968px;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
 
 .grid{
   display: grid;
+}
+
+input {
+  width: 100%;
+  padding: 1rem;
+  background: var(--background2);
+  color: var(--text);
+  margin-bottom: 1rem;
+
+  &[type=submit] {
+    margin: 1rem 0 0 0;
+    background: var(--primary);
+    color: var(--text-btn);
+    cursor: pointer;
+
+    &:hover {
+      background: var(--primary-light);
+    }
+  }
+}
+
+#cencont, #cjpcont {
+  height: 8rem;
 }
