--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,22 +1,19 @@
 .btn {
-  &-1 {
-    padding: .7rem 1.5rem;
-    color: var(--text-btn);
-    background-color: var(--primary);
+  padding: .7rem 1.5rem;
+  color: var(--text-btn);
+}
 
-    &:hover {
-      background-color: var(--primary-light);
-    }
+.orange {
+  background-color: var(--secondary-alt);
+  &:hover {
+    background-color: var(--secondary-light);
   }
+}
 
-  &-2 {
-    padding: .7rem 1.5rem;
-    color: var(--text-btn);
-    background-color: var(--secondary);
+.pink {
+  background-color: var(--secondary);
 
-    &:hover {
-      background-color: var(--secondary-light);
-    }
+  &:hover {
+    background-color: var(--secondary-light);
   }
-  
 }
