--- a/src/scss/components/_home.scss
+++ b/src/scss/components/_home.scss
@@ -13,7 +13,7 @@
 }
 
 .hero {
-  width: 70%;
+  width: 80%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -33,7 +33,7 @@
       content: 'scroll down';
       position: absolute;
       top: -1.7rem;
-      left: .2rem;
+      left: .3rem;
       font-size: 1rem;
       opacity: 0;
       transition: opacity .2s;
@@ -45,7 +45,7 @@
     }
   }
 
-  & .btn-2 {
+  & .btn {
     width: 50%;
   }
 }
