--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500&family=Righteous&family=Josefin+Sans&display=swap');
 @import 'abstract/variables';
 @import 'base/base';
 @import 'base/layout';
@@ -7,5 +6,10 @@
 @import 'components/buttons';
 @import 'components/header';
 @import 'components/home';
+@import 'components/modal';
+@import 'components/about';
+@import 'components/services';
+@import 'components/contact';
+@import 'components/scroll';
 @import 'components/keyframes';
 @import 'components/breakpoints';
