Complete website's homepage

--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -4,7 +4,6 @@
   --header-height: 4rem;
 
   // COLORS
-
   --primary: hsl(260, 100%, 64%); //8547ff
   --primary-light: hsl(260, 100%, 70%); //96f
   --primary-alt: hsl(174, 62%, 57%); //4dd5c8
@@ -15,6 +14,7 @@
   --text: hsl(207, 95%, 13%);
   --text-btn: hsl(100, 100%, 99%);
   --text-alt: hsl(100, 100%, 99%);
+  --text-footer: hsl(207, 10%, 43%);
 
   --background1:hsla(220, 14%, 91%, 1);
   --background2: hsla(220, 13%, 85%, 1); 
