--- a/src/scss/theme/_dark.scss
+++ b/src/scss/theme/_dark.scss
@@ -1,6 +1,7 @@
 .dark-theme {
   --text: hsl(100, 100%, 99%);
   --text-alt: hsl(207, 95%, 8%);
+  --text-footer: hsl(207, 10%, 53%);
 
   --background1:hsla(215, 28%, 17%, 1);
   --background2: hsla(221, 39%, 11%, 1);
