--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,9 +7,11 @@
 @import 'components/header';
 @import 'components/home';
 @import 'components/modal';
-@import 'components/about';
+@import 'components/features';
 @import 'components/services';
+@import 'components/download';
 @import 'components/contact';
+@import 'components/footer';
 @import 'components/scroll';
 @import 'components/keyframes';
 @import 'components/breakpoints';
