Fix download section mediaqueries' bugs

--- a/src/scss/components/_breakpoints.scss
+++ b/src/scss/components/_breakpoints.scss
@@ -23,10 +23,10 @@
   .download {
     &__content {
       flex-direction: row;
-      gap: 5rem;
-
-      & .btn {
-        font-size: 1.2rem;
+      gap: 2rem;
+      
+      &__img {
+        width: 30%;
       }
     }
 
